--- a/h5p_extras.info.yml
+++ b/h5p_extras.info.yml
@@ -2,6 +2,7 @@ name: 'H5P Extras'
 type: module
 description: 'Create extra functionality to H5P in Drupal 8'
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'TCM'
 dependencies:
   - h5p
